<resources>

    <string name="app_name">Poultry farming</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="breeds">Breeds</string>
    <string name="brooding">Brooding</string>
    <string name="purpose">Purpose</string>
    <string name="housing_and_equipment">Housing and equipment</string>
    <string name="breed">Breed</string>
    <string name="poultry_management">Poultry management</string>
    <string name="poultry_health_management">Poultry health management</string>
    <string name="bad_habits">Bad habits</string>
    <string name="best_practice">Best practice</string>
    <string name="title_activity_common_diseases">COMMON DISEASES</string>
    <string name="title_activity_best_practice">BEST PRACTICE</string>
    <string name="title_activity_bad_habits">BAD HABITS</string>
    <string name="bryankoech7_gmail_com">bryankoech7@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="about">This application has all the basic information you need to start a successful poultry farming business in Kenya.</string>
    <string name="poultry_farming">POULTRY FARMING.</string>
    <string name="image_place_holder">image place holder</string>
    <string name="text_view_description">TextView</string>
    <string name="purpose2">PURPOSE</string>
    <string name="example">EXAMPLE</string>
    <string name="characteristics">Characteristics</string>
    <string name="breeds_example">Breeds example</string>
    <string name="breeds_purpose">Breeds purpose</string>
    <string name="breeds_examples">Breeds examples</string>
    <string name="breeds_characteristics">Breeds characteristics</string>
    <string name="title_main">Title main</string>
    <string name="main_description">Main description</string>
    <string name="description">Description</string>
    <string name="title_activity_example">Example</string>
    <string name="breed1">BREED</string>
    <string name="habit">Habit</string>
    <string name="image_habit">Poultry vice image</string>
    <string name="text_view_causes">Causes</string>
    <string name="text_view_prevention">Prevention</string>
    <string name="text_view_heading">Heading</string>
    <string name="text_view_title">Title</string>
    <string name="text_view_measures">Measures</string>
    <string name="best_practice_">POULTRY BIO-SECURITY.</string>
    <string name="best_practice_description">Achieving good bird, barn and gut health requires operational excellence and attention to detail. A combination of quality nutrition, veterinary guidance and increased consideration of barn and bird management will help to ensure birds have the best possible chance to perform at their maximum potential. Some critical focus areas are as follows:</string>
<!--Admob strings-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="why_brood">why brood?</string>
    <string name="what_is_brooding">What is brooding</string>
    <string name="natural_brooding">Natural brooding</string>
    <string name="natural_brooding_description">Natural brooding description</string>
    <string name="a_hen_brooding">A hen brooding</string>
    <string name="artificial_brooding">Artificial brooding</string>
    <string name="factors_to_consider_when_brooding">Factors to consider when brooding</string>
    <string name="header_image">Header image</string>
    <string name="spalsh_image">spalsh image</string>
    <string name="the_ultimate_poultry_farming_guide">the ultimate poultry farming guide !</string>
    <string name="bryannkoech7_gmail_com">©bryannkoech7@gmail.com</string>
    <string name="types_of_brooding">types of brooding</string>
    <string name="artificial_brooding_image">Artificial brooding image</string>
    <string name="brooding_description">Brooding description</string>
    <string name="image">image</string>
    <string name="change_layout">change layout</string>
    <string name="item">item</string>
    <string name="toggle">toggle</string>
    <string name="grid">grid</string>
    <string name="About">About</string>
    <string name="premium_app">Buy app &amp; remove ads</string>
    <string name="get_more">GET MORE</string>
    <string name="app_navigation">APP NAVIGATION</string>
    <string name="error_no_internet_connection">Error: No internet connection! kindly turn on your internet and refresh.</string>
    <string name="refresh">refresh</string>
    <string name="error_image">error image</string>
</resources>