<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            app:cardUseCompatPadding="false"
            app:contentPadding="4dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_view_breeds"
                        style="@style/Base.Widget.MaterialComponents.TextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/breed1"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corners"
                        android:contentDescription="@string/breed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_breeds"
                        tools:srcCompat="@tools:sample/avatars" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/text_view_breeds_example_examples"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/breeds_examples"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                <TextView
                    android:id="@+id/text_view_breeds_example_purpose"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/breeds_purpose"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_breeds_example_examples" />

                <TextView
                    android:id="@+id/text_view_breeds_example_characteristics"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/breeds_characteristics"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_breeds_example_purpose" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>